fixed icon alignment

--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -108,6 +108,7 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
+          align-items: center;
 
           &:hover {
             filter: drop-shadow(2px 4px 6px black);
